...
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
    </dependencies>
    <scenes>
        <!--Login-->
        <scene sceneID="kgW-eE-Q0Z">
            <objects>
                <tableViewController storyboardIdentifier="loginController" title="Login" id="NdK-2R-eFj" customClass="LoginController" customModule="CodeMash2016" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="vhA-Ka-Yze">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="usernameCell" id="z1A-9D-N9Z">
...
            </objects>
            <point key="canvasLocation" x="1143.5" y="1224.5"/>
        </scene>
        <!--Users-->
        <scene sceneID="lVo-9H-wbQ">
            <objects>
                <tableViewController storyboardIdentifier="showUsersController" title="Users" id="F7s-5R-BcN" customClass="ShowUsersController" customModule="CodeMash2016" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="1nM-zG-tHR">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="userCellIdentifier" selectionStyle="default" indentationWidth="10" reuseIdentifier="userCellIdentifier" rowHeight="55" id="AcH-Da-byS" customClass="UserTableViewCell" customModule="CodeMash2016" customModuleProvider="target">
...
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rv0-sM-Dmu">
                                <rect key="frame" x="262" y="176" width="97" height="30"/>
                                <state key="normal" title="Choose Photo"/>
                                <connections>
                                    <action selector="attachPhoto:" destination="usC-Af-5Sd" eventType="touchUpInside" id="0Mp-z9-8qe"/>
                                </connections>
                            </button>
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ybt-QZ-fS0">
                                <rect key="frame" x="109" y="214" width="250" height="250"/>
...
