...

        let arguments = NSProcessInfo.processInfo().arguments
        let mockData = arguments.contains("--mockdata")
        if (mockData) {
            let initialUsers = [
                User(id: NSUUID(), name: "One", password: "pass", emailAddress: EmailAddress(user: "one", host: "desai.com"), image: MockedRESTCalls.getImageWithName("NumberOne")),
                User(id: NSUUID(), name: "Two", password: "pass", emailAddress: EmailAddress(user: "two", host: "desai.com"), image: MockedRESTCalls.getImageWithName("NumberTwo")),
                User(id: NSUUID(), name: "Three", password: "pass", emailAddress: EmailAddress(user: "three", host: "desai.com"), image: MockedRESTCalls.getImageWithName("NumberThree")),
                User(id: NSUUID(), name: "Four", password: "pass", emailAddress: EmailAddress(user: "four", host: "desai.com"), image: MockedRESTCalls.getImageWithName("NumberFour")),
                User(id: NSUUID(), name: "Admin", password: "admin", emailAddress: EmailAddress(user: "ravidesai", host: "me.com"), image: nil)
            ]
            
            let initialGames = [
                Game(id: NSUUID(), title: "Glorantha", owner: initialUsers[4].id!, users: [initialUsers[0].id!, initialUsers[1].id!]),
...
