...
        emailTextField.delegate = self
        
        let deleteButton = UIBarButtonItem(barButtonSystemItem: UIBarButtonSystemItem.Trash, target: self, action: Selector("deleteUser:"))
        deleteButton.enabled = self.viewModel!.canBeDeleted

        self.navigationItem.rightBarButtonItem = deleteButton
        self.navigationItem.title = "Edit User"
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
        ensureViewModelIsCreated()
        initializeComponentsFromViewModel()
...
        let userIsBeingUpdated = self.viewModel?.uuidString != nil
        
        if (!informationHasChanged && self.viewModel?.uuidString != nil) {
            return true
        }
        
        let title = "Save changes"
        
        let message: String? = (!emailAddressIsValid || !nameIsValid) ? "Warning - the name or email field has an invalid value" : nil
        
        let alert = UIAlertController(title: title, message: message, preferredStyle: UIAlertControllerStyle.ActionSheet)
        
        let exitAction = ActionFactory.Action("Exit without saving", UIAlertActionStyle.Default) { (action) -> Void in
...
